hphp/test/slow/hack_mode/2205.php.expectf
HipHop Fatal error: Argument 1 passed to t() must be an instance of X, int given in %s/test/slow/hack_mode/2205.php on line 4
